<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_grey">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/genre"
            android:textStyle="bold"
            android:textSize="18sp"
            android:paddingVertical="8dp"
            android:gravity="center"/>
        <FrameLayout
            android:id="@+id/filters_frame_genre"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/region"
            android:textStyle="bold"
            android:textSize="18sp"
            android:paddingVertical="8dp"
            android:gravity="center"/>
        <FrameLayout
            android:id="@+id/filters_frame_region"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/year"
            android:textStyle="bold"
            android:textSize="18sp"
            android:paddingVertical="8dp"
            android:gravity="center"/>
        <FrameLayout
            android:id="@+id/filters_frame_year"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:textStyle="bold"
            android:textSize="18sp"
            android:paddingVertical="8dp"
            android:gravity="center"/>
        <FrameLayout
            android:id="@+id/filters_frame_rating"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/audio"
            android:textStyle="bold"
            android:textSize="18sp"
            android:paddingVertical="8dp"
            android:gravity="center"/>
        <FrameLayout
            android:id="@+id/filters_frame_audio"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

</LinearLayout>