<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.leanback.widget.BrowseFrameLayout
        android:id="@+id/navigationBar"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:background="#000000"
        android:nextFocusLeft="@id/container">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/btn_search"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@string/search"
                android:layout_marginTop="45dp"
                android:gravity="center_vertical"
                android:drawablePadding="15dp"
                android:paddingHorizontal="15dp"
                android:drawableStart="@drawable/ic_search"
                android:focusable="true"
                android:background="@drawable/selector_main"
                android:textColor="@color/text_selector_white_grey"
                />
            <TextView
                android:id="@+id/btn_home"
                android:layout_width="match_parent"
                android:paddingHorizontal="15dp"
                android:gravity="center_vertical"
                android:text="@string/home"
                android:drawablePadding="15dp"
                android:layout_height="45dp"
                android:background="@drawable/selector_main"
                android:textColor="@color/text_selector_white_grey"
                android:focusable="true"
                android:drawableStart="@drawable/ic_home" />
            <TextView
                android:id="@+id/btn_movie"
                android:layout_width="match_parent"
                android:paddingHorizontal="15dp"
                android:gravity="center_vertical"
                android:text="@string/movie"
                android:drawablePadding="15dp"
                android:layout_height="45dp"
                android:background="@drawable/selector_main"
                android:textColor="@color/text_selector_white_grey"
                android:focusable="true"
                android:drawableStart="@drawable/ic_movie" />
            <TextView
                android:id="@+id/btn_tv"
                android:layout_width="match_parent"
                android:paddingHorizontal="15dp"
                android:gravity="center_vertical"
                android:text="@string/tv"
                android:drawablePadding="15dp"
                android:layout_height="45dp"
                android:background="@drawable/selector_main"
                android:textColor="@color/text_selector_white_grey"
                android:focusable="true"
                android:drawableStart="@drawable/ic_tv" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/btn_settings"
                android:layout_width="match_parent"
                android:paddingHorizontal="15dp"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:drawablePadding="15dp"
                android:text="@string/settings"
                android:focusable="true"
                android:background="@drawable/selector_main"
                android:textColor="@color/text_selector_white_grey"
                android:drawableStart="@drawable/ic_settings" />

            <TextView
                android:id="@+id/btn_profile"
                android:layout_width="match_parent"
                android:paddingHorizontal="15dp"
                android:layout_height="45dp"
                android:layout_marginBottom="45dp"
                android:gravity="center_vertical"
                android:drawablePadding="15dp"
                android:text="@string/language"
                android:focusable="true"
                android:background="@drawable/selector_main"
                android:textColor="@color/text_selector_white_grey"
                android:drawableStart="@drawable/ic_genre" />

        </LinearLayout>


    </androidx.leanback.widget.BrowseFrameLayout>
    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:nextFocusRight="@id/navigationBar"/>

</LinearLayout>